# rotten-tempura

./: .gitignore  LICENSE  README.md  make_build_vsproj.bat  make_build_xcode.sh
source/: CMakeLists.txt
source/temp/: CMakeLists.txt
source/temp/app/: CMakeLists.txt  app.h  application_base.h  utility.h
source/temp/app/mac/: mac_application.h  mac_application.mm  mac_utility.mm
source/temp/app/windows/: windows_application.cpp  windows_application.h  windows_utility.cpp
source/temp/base/: CMakeLists.txt  assertion.h  base.h  clamp.h  define.h  logger.cpp  logger.h  managed_object.h  object_manager.h  read_file.cpp  read_file.h  sleep.h  thread_pool.h  timer.h
source/temp/core/: CMakeLists.txt  assertion.h  clamp.h  color.cpp  color.h  core.h  debug_out.h  define.h  logger.cpp  logger.h  read_file.cpp  read_file.h  sleep.h  thread_pool.h  timer.h
source/temp/gfx/: CMakeLists.txt  api_type.h  color.cpp  color.h  device.cpp  device.h  gfx.h  swap_chain.h
source/temp/gfx/d3d11/: d3d11_device.cpp  d3d11_device.h  d3d11_swap_chain.cpp  d3d11_swap_chain.h  d3d11_utility.h
source/temp/gfx/dx11/: dx11_device.cpp  dx11_device.h
source/temp/gfx/tvk/: tvk_context.cpp  tvk_context.h  tvk_device.cpp  tvk_device.h  tvk_swap_chain.cpp  tvk_swap_chain.h  tvk_utility.cpp  tvk_utility.h
source/temp/gfx/vulkan/: vulkan_context.cpp  vulkan_context.h  vulkan_device.cpp  vulkan_device.h  vulkan_swap_chain.cpp  vulkan_swap_chain.h  vulkan_utility.cpp  vulkan_utility.h
source/temp/math/: CMakeLists.txt  constants.cpp  constants.h  functions.h  matrix44.h  matrix44_functions.h  quaternion.h  quaternion_functions.h  temp_math.h  vector.h  vector2.h  vector2_functions.h  vector3.h  vector3_functions.h  vector4.h  vector4_functions.h
source/temp/render/: CMakeLists.txt  camera.cpp  camera.h  render.h  renderer.cpp  renderer.h
source/temp/render/vulkan/: vulkan_renderer.cpp  vulkan_renderer.h
source/test/: CMakeLists.txt
source/test/app/: CMakeLists.txt  main.cpp
source/test/base/: CMakeLists.txt  main.cpp
source/test/core/: CMakeLists.txt  main.cpp
source/test/math/: CMakeLists.txt  main.cpp
